# mstdn-rss2bsky-post

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  xrpc_client.rs
src/richtext/: from_html_impl.rs  mod.rs
src/rss_ext/: mod.rs
