[package]
name = "mstdn-rss2bsky-post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atrium-api = "0.3"
reqwest = "0.11"
async-trait = "0.1"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rss = "2.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
