[package]
name = "mstdn-rss2bsky-post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atrium-api = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
async-trait = "0.1"
clap = { version = "4.3", features = ["derive", "env"] }
rss = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
html5ever = "0.26"
file-lock = "2.1"

[[bin]]
name = "mstdn-rss2bsky-post"
